--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ https://css-tricks.com/snippets/css/using-font-face/
 
 body {
     background-color: rgb(45, 142, 221);
-    background-image: url("img/background_8.jpg");
+    background-image: url("/img/background_10.jpg");
     background-size: auto 100vh;
     color: #FFF;
     font-family: Roboto-Thin, Nunito, Arial, Verdana;
